[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "squarebot"
description = "SQuaRE Slack bot designed around Kafka microservice backends."
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["rubin", "lsst"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Typing :: Typed",
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "starlette",
    "uvicorn[standard]>=0.30",
    "python-multipart",
    "pydantic>=2",
    "pydantic-settings>=2.14.2",
    "safir>=13",
    "faststream[kafka]>=0.7,<0.8",
    "rubin-squarebot",
]
dynamic = ["version"]

[project.scripts]
squarebot = "squarebot.cli:main"

[project.urls]
Homepage = "https://squarebot.lsst.io"
Source = "https://github.com/lsst-sqre/squarebot"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "asgi-lifespan",
    "coverage[toml]",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
lint = [
    # pre-commit-uv is intentionally omitted: on Python 3.14 its uv-created
    # hook venvs write a pyvenv.cfg ``version_info`` that fails pre-commit's
    # health check ("python version did not match created version"). Plain
    # pre-commit (virtualenv backend) works; revisit once pre-commit-uv
    # supports 3.14.
    "pre-commit",
]
typing = [
    "mypy",
]
nox = [
    "nox[uv]",
    "nox-uv",
    "testcontainers[kafka]",
]
docs = [
    "documenteer[guide]>=2.4.0,<3",
    "autodoc_pydantic",
]

# The repo is a uv workspace: the published rubin-squarebot client is the lone
# member and the server depends on it via the workspace. Versioning stays
# unified -- one git tag versions both the Docker image and the client (the
# client keeps setuptools_scm ``root = ".."`` with the same tag scheme).
[tool.uv.workspace]
members = ["client"]

[tool.uv.sources]
rubin-squarebot = { workspace = true }

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
parallel = true
branch = true
source = ["squarebot"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
# Scope the server ``test`` session to the server suite; the client tests live
# under ``client/tests`` and are exercised by the ``client_test*`` sessions.
testpaths = ["tests"]
# The python_files setting is not for test detection (pytest will pick up any
# test files named *_test.py without this setting) but to enable special
# assert processing in any non-test supporting files under tests.  We
# conventionally put test support functions under tests.support and may
# sometimes use assert in test fixtures in conftest.py, and pytest only
# enables magical assert processing (showing a full diff on assert failures
# with complex data structures rather than only the assert message) in files
# listed in python_files.
python_files = ["tests/*.py", "tests/*/*.py"]

[tool.ruff]
extend = "ruff-shared.toml"

[tool.ruff.lint.extend-per-file-ignores]
"noxfile.py" = [
    "D100",    # noxfile doesn't need a docstring
    "T201",    # noxfile uses print
]
"src/squarebot/handlers/**" = [
    "D103",    # FastAPI handlers should not have docstrings
    "B012",    # Allow returning inside finally
]
"tests/**" = [
    "C901",    # tests are allowed to be complex, sometimes that's convenient
    "D101",    # tests don't need docstrings
    "D103",    # tests don't need docstrings
    "PLR0915", # tests are allowed to be long, sometimes that's convenient
    "PT012",   # way too aggressive about limiting pytest.raises blocks
    "S101",    # tests should use assert
    "S106",    # tests are allowed to hard-code dummy passwords
    "SLF001",  # tests are allowed to access private members
]

[tool.ruff.lint.isort]
known-first-party = ["squarebot", "rubin.squarebot", "tests"]
split-on-trailing-comma = false

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
local_partial_types = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src", "client/src"]
plugins = ["pydantic.mypy"]
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.scriv]
categories = [
    "Backwards-incompatible changes",
    "New features",
    "Bug fixes",
    "Other changes",
]
entry_title_template = "{{ version }} ({{ date.strftime('%Y-%m-%d') }})"
format = "md"
md_header_level = "2"
new_fragment_template = "file:changelog.d/_template.md"
skip_fragments = "_template.md"
