[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "rubin-squarebot"
description = "Client library for the Rubin Observatory Squarebot"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["rubin", "lsst"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = ["pydantic>=2", "safir"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    # Testing
    "mypy",
]

[project.urls]
Homepage = "https://github.com/lsst-sqre/squarebot"
Source = "https://github.com/lsst-sqre/squarebot"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] # for namespace package discovery

[tool.setuptools_scm]
root = "../"

[tool.coverage.run]
parallel = true
branch = true
source = ["rubin.squarebot"]

[tool.coverage.paths]
source = ["src", "../.nox/test/lib/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
extend = "../pyproject.toml"

[tool.pytest.ini_options]
asyncio_mode = "strict"
python_files = ["tests/*.py", "tests/*/*.py"]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
local_partial_types = true
plugins = ["pydantic.mypy"]
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
