[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "rubin-squarebot"
description = "Client library for the Rubin Observatory Squarebot"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["rubin", "lsst"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Typing :: Typed",
]
# The client only imports pydantic; the previous unused ``safir`` dependency
# was dropped during modernization so the published wheel stays lean and the
# ``client_test_oldest`` lowest-direct resolution is clean. The floor is set so
# the oldest resolvable pydantic ships cp313 wheels.
requires-python = ">=3.13"
dependencies = ["pydantic>=2.10"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/lsst-sqre/squarebot"
Source = "https://github.com/lsst-sqre/squarebot"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"] # for namespace package discovery

# Versioning stays unified with the server: the client reads the same repo git
# tags (``root = ".."``) so one release tag versions both the Docker image and
# the published client.
[tool.setuptools_scm]
root = ".."

[tool.coverage.run]
parallel = true
branch = true
source = ["rubin.squarebot"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
extend = "../ruff-shared.toml"

# Per-file-ignores inherited from ruff-shared.toml resolve relative to that
# file's directory (the repo root), so the client's own ``tests`` tree needs
# its ignores declared here, where they resolve relative to ``client/``.
[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = [
    "D101",    # tests don't need docstrings
    "D103",    # tests don't need docstrings
    "S101",    # tests should use assert
]

[tool.pytest.ini_options]
python_files = ["tests/*.py", "tests/*/*.py"]
